cargo-features = ["edition2024"]

[package]
name = "aoc2024"
version = "0.1.0"
authors = ["Molive <moliveofscratch@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.29"
itertools = "0.13.0"
time = "*"
